syntax = "proto3";

package rpc;
option go_package="src/api/rpc";

import "google/protobuf/timestamp.proto";

message UserProto {
    int32 ID = 1;
    string Nickname = 2;
    string Email = 3;
    string Password = 4;
    google.protobuf.Timestamp CreatedAt = 5;
    google.protobuf.Timestamp UpdatedAt = 6;
}

message EventProto {
    int64 ID = 1;
    string Title = 2;
    string Content = 3;
    int32 AuthorID = 5;
    google.protobuf.Timestamp CreatedAt = 6;
    google.protobuf.Timestamp UpdatedAt = 7;
}

message ListEventRequest {

}

message ListEventResponse {
    EventProto event = 1;
}

service EventService{
    // Grpc streaming list of event from unary request
    rpc ListEvent (ListEventRequest) returns (stream ListEventResponse);
}
